--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img:hover {
   background-color: #dd4444;
 }
 .column {
-
+width: 48%;
 }
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
 
